--- a/carousel.css
+++ b/carousel.css
@@ -5,6 +5,9 @@
 body {
   padding-bottom: 40px;
   color: #5a5a5a;
+  font-family: Georgia, "Times New Roman", KaiTi, "楷体", STKaiti, "华文楷体",
+               "Microsoft YaHei", "微软雅黑",
+               STXihei, "华文细黑", serif;
 }
 
 
